--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,12 @@ buildscript {
 apply plugin: 'kotlin'
 apply plugin: 'application'
 
+compileKotlin {
+    kotlinOptions{
+        freeCompilerArgs = ["-Xallow-result-return-type"]
+    }
+}
+
 group 'fadecandy-rest'
 version '0.0.0'
 mainClassName = "io.ktor.server.netty.EngineMain"
@@ -29,7 +35,12 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile 'com.google.code.gson:gson:2.8.5'
     compile "io.ktor:ktor-server-netty:$ktor_version"
+    compile "io.ktor:ktor-locations:$ktor_version"
+    compile "io.ktor:ktor-gson:$ktor_version"
     compile "ch.qos.logback:logback-classic:$logback_version"
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
+    testCompile "io.ktor:ktor-server-test-host:$ktor_version"
+    testCompile "io.mockk:mockk:1.9"
 }
