Update the Configuration with the New Module Name

--- a/resources/application.conf
+++ b/resources/application.conf
@@ -4,6 +4,6 @@ ktor {
         port = ${?PORT}
     }
     application {
-        modules = [ dev.simonas.ApplicationKt.module ]
+        modules = [ dev.simonas.fadecandyrest.AppKt.module ]
     }
 }
