--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,10 @@ dependencies {
     compile "io.ktor:ktor-locations:$ktor_version"
     compile "io.ktor:ktor-gson:$ktor_version"
     compile "ch.qos.logback:logback-classic:$logback_version"
+    
+    testCompile 'io.rest-assured:rest-assured:3.3.0'
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
     testCompile "io.ktor:ktor-server-test-host:$ktor_version"
     testCompile "io.mockk:mockk:1.9"
+    testCompile "org.spekframework.spek2:spek-dsl-jvm:2.0.2"
 }
